--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 os: windows
 language: shell
 script:
-  - dotnet --version
+  - dir
+  - fsutil fsinfo drives
+  - .\bin\diskspd,exe -c100b -b4K -o32 -F8 -T1b -s8b -W60 -d60 -Sh testfile.dat
