--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: shell
 script:
   - dir
   - fsutil fsinfo drives
-  - .\bin\diskspd,exe -c100b -b4K -o32 -F8 -T1b -s8b -W60 -d60 -Sh testfile.dat
+  - ./bin/diskspd.exe -c100b -b4K -o32 -F8 -T1b -s8b -W60 -d60 -Sh testfile.dat
